[package]
name = "url-prefix"
version = "1.3.5"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/url-prefix"
homepage = "https://magiclen.org/url-prefix"
keywords = ["url", "prefix", "http", "https", "ftp"]
categories = ["value-formatting"]
description= "A library for creating URL prefix strings."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]

[badges.travis-ci]
repository = "magiclen/url-prefix"
branch = "master"

[dependencies]
validators = { version = ">=0.18,<0.21", optional = true }

[features]
validator = ["validators"]

[package.metadata.docs.rs]
all-features = true