[package]
name = "url-prefix"
version = "2.0.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/url-prefix"
homepage = "https://magiclen.org/url-prefix"
keywords = ["url", "prefix", "http", "https", "ftp"]
categories = ["no-std", "value-formatting"]
description = "A library for creating URL prefix strings."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[badges.travis-ci]
repository = "magiclen/url-prefix"
branch = "master"

[dependencies]
cow-utils = "0.1"
slash-formatter = "3"